--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회식 조편성</title>
+    <title>Draw Simulation</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -230,21 +230,38 @@
         });
 
         document.getElementById('generate-button').addEventListener('click', function() {
-            const ports = document.querySelectorAll('.dropzone');
-            const teams = Array.from(ports).map(port => {
-                return Array.from(port.children).map(child => child.textContent);
-            });
+    const ports = document.querySelectorAll('.dropzone');
+    const participants = Array.from(ports).map(port => {
+        return Array.from(port.children).map(child => child.textContent);
+    });
 
-            const resultDiv = document.getElementById('result');
-            resultDiv.innerHTML = '';
+    const minSize = Math.min(...participants.map(port => port.length));
 
-            teams.forEach((team, index) => {
-                const teamDiv = document.createElement('div');
-                teamDiv.classList.add('team');
-                teamDiv.textContent = `Team ${index + 1}: ${team.join(', ')}`;
-                resultDiv.appendChild(teamDiv);
-            });
+    if (minSize === 0) {
+        alert('각 포트에 최소 한 명 이상 배치해야 합니다.');
+        return;
+    }
+
+    const teams = [];
+    for (let i = 0; i < minSize; i++) {
+        const team = participants.map(port => {
+            const randomIndex = Math.floor(Math.random() * port.length);
+            return port.splice(randomIndex, 1)[0];
         });
+        teams.push(team);
+    }
+
+    const resultDiv = document.getElementById('result');
+    resultDiv.innerHTML = '';
+
+    teams.forEach((team, index) => {
+        const teamDiv = document.createElement('div');
+        teamDiv.classList.add('team');
+        teamDiv.textContent = `Team ${index + 1}: ${team.join(', ')}`;
+        resultDiv.appendChild(teamDiv);
+    });
+});
+
     </script>
 </body>
 </html>
