--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             <div class="name" draggable="true">양유경</div>
             <div class="name" draggable="true">고수완</div>
             <div class="name" draggable="true">김진영</div>
+            <div class="name" draggable="true">양현수</div>
         </div>
 
         <div id="port-inputs">
